# mdshrink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/mdshrink_mcp/: __init__.py  cache.py  server.py
src/tokensaver_mcp/: __init__.py  cache.py  cli.py  image.py  pdf.py  server.py  tokens.py
