[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokensaver-mcp"
version = "1.0.0"
description = "MCP server that auto-compresses PDFs and screenshots to Markdown, reducing token usage 5-10x"
readme = "README.md"
license = "AGPL-3.0"
authors = [{ name = "Manish" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.25.0",
    "rapidocr-onnxruntime>=1.4.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
tokensaver-mcp = "tokensaver_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/anomalyco/tokensaver-mcp"
PyPI = "https://pypi.org/project/tokensaver-mcp"

[tool.hatchling.build.targets.wheel]
packages = ["tokensaver_mcp"]

[tool.hatchling.build.targets.wheel.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]