[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdshrink-mcp"
version = "0.1.0"
description = "Auto-compress PDFs and screenshots to Markdown before they hit Claude Code's context — 5-10x fewer tokens"
readme = "README.md"
license = "MIT"
authors = [{ name = "Manish" }]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.25.0",
    "rapidocr-onnxruntime>=1.4.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
mdshrink = "mdshrink_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Manish3451/mdshrink"
PyPI = "https://pypi.org/project/mdshrink-mcp"

[tool.hatchling.build.targets.wheel]
packages = ["mdshrink_mcp"]

[tool.hatchling.build.targets.wheel.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]